--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db_FutApp?useTimezone=true&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=josenunes10
+
+
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
